# geo_kit_graphql

./: Cargo.toml
src/: main.rs
src/graphql/: mod.rs  routes.rs  schema.rs
src/graphql/mapping/: mutations.rs  types.rs  utils.rs
